--- a/Day1/ansible/roles/nginx/handlers/main.yml
+++ b/Day1/ansible/roles/nginx/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
 # handlers file for nginx
-- name: Restart nginx web server service to apply config changes
-  when: (output.changed == true and ansible_distribution == "Ubuntu" and ansible_os_family == "Debian")
-  service: name=nginx state=restarted
+- name: Restart nginx web server service to apply config changes in Ubuntu
+  when: ( ansible_distribution == "Ubuntu" and ansible_os_family == "Debian" )
+  service: name=nginx enabled=true state=restarted
+
+- name: Restart nginx web server service to apply config changes in Rocky 
+  when: ( ansible_distribution == "Rocky" and ansible_os_family == "RedHat" and output.rc == 0 )
+  shell: nginx
