--- a/Day1/ansible/roles/nginx/tasks/main.yml
+++ b/Day1/ansible/roles/nginx/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 # tasks file for nginx
-- include_tasks: install-nginx-ubuntu.yml
-- include_tasks: configure-nginx-ubuntu.yml
+- include_tasks: "install-nginx-{{ansible_distribution|lower}}.yml"
+- include_tasks: "configure-nginx-{{ansible_distribution|lower}}.yml"
 - include_tasks: deploy-webpage.yml
