--- a/Day5/DevOpsCICDPipeline/Jenkinsfile
+++ b/Day5/DevOpsCICDPipeline/Jenkinsfile
@@ -1,6 +1,9 @@
 #!/usr/bin/env groovy
 
 pipeline {
+    agent {
+        label 'Built-In Node'
+    }
     stages {
         stage('Build Custom Docker Image') {
             steps {
