--- a/Day5/DevOpsCICDPipeline/Jenkinsfile
+++ b/Day5/DevOpsCICDPipeline/Jenkinsfile
@@ -2,7 +2,7 @@
 
 pipeline {
     agent {
-        label 'Built-In Node'
+        label 'built-in'
     }
     stages {
         stage('Build Custom Docker Image') {
